# satdata

./: .flake8  .gitignore  CHANGELOG.md  README.md  __init__.py  aws_goes.py  environment.yml  multiprocessing.py  processing.py  requirements.txt  satpy_rgb.py  setup.cfg  setup.py  tiler.py  utils.py
.github/workflows/: pythonapp.yml
.semaphore/: semaphore.yml
satdata/: __init__.py  aws_goes.py  cli.py  utils.py
tests/: test_goes16_cli.py  test_zenith_time_calc.py
