[metadata]
name = satdata
version = attr: satdata.__version__
author = Leif Denby
author_email = leifdenby@gmail.com
description = Satellite data access from Amazon S3 via python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/satdata

[options]
packages=find:
install_requires =
  tqdm
  s3fs
  isodate

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
dev =
  %(test)s
  pre-commit
  ipython
  ipdb

[flake8]
extend-ignore = E203, E266, E501
# line length is intentionally set to 80 here because black uses Bugbear
# See https://github.com/psf/black/blob/master/docs/the_black_code_style.md#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
# We need to configure the mypy.ini because the flake8-mypy's default
# options don't properly override it, so if we don't specify it we get
# half of the config from mypy.ini and half from flake8-mypy.
mypy_config = mypy.ini
per-file-ignores = __init__.py:F401

[isort]
profile=black
